# weather-app-mcp

./: .gitignore  BEDROCK_MODELS.md  INTERACTIVE_CLIENTS_SUMMARY.md  INTERACTIVE_GUIDE.md  README.md  pyproject.toml  requirements.txt
client/: __init__.py  config_manger.py  env.py  llm_interactive_client.py  mcp_client.py
examples/: custom_client.py  run_client.py  run_server.py
server/: __init__.py  mcp_server.py
tests/: test_client.py  test_integration.py  test_server.py
